# YT-MLOPS-Vehicle-project-1-

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: Haruku.yaml  ci-cd.yaml  render.yaml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jp.py  undill
notebook/: Mongodb_demo.ipynb  ex_notebook.ipynb
predictive_model/08_16_2025_13_45_00/: rf_metrics.json
src/components/: model_evaluation.py  model_trainer.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: model_registry.py  proj1_data.py
src/entity/: artifact_entity.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
vehicle_insurance_env/: pyvenv.cfg
